# bn-superh-arch

./: CMakeLists.txt  NOTICE.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: architecture.cpp  architecture.h  architecture_info_test.cpp  architecture_text_test.cpp  flags.h  info.cpp  instructions.cpp  instructions.h  lift.cpp  opcodes.cpp  opcodes.h  opcodes_test.cpp  registers.cpp  registers.h  sizes.h  text.cpp
